Fix touch events on mobile safari

--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -16,6 +16,7 @@
   transform: translateX(-50%);
   transition: all 500ms;
   min-width: 300px;
+  touch-action: none;
 
   &.satisfied {
     animation: satisfied 1000ms ease-out forwards;
